# data-efficiency

./: .gitignore  Cargo.toml  README.md
game-rs/: Cargo.toml  pyproject.toml
game-rs/python/game_rs/: __init__.py
game-rs/python/tests/: test_all.py
game-rs/src/: lib.rs
src/python/: train.py
src/sim/: Cargo.toml
src/sim-rs/: Cargo.toml  pyproject.toml
src/sim-rs/python/sim_rs/: __init__.py
src/sim-rs/src/: lib.rs  sim_builder.rs
src/sim-rs/src/sim_builder/: build_object.rs  build_sim.rs  parse_json.rs
src/sim/src/: lib.rs
src/sim/src/sim_builder/: build_object.rs  build_sim.rs  parse_json.rs
