[package]
name = "game-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "game_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21"
bevy = "0.13"
bevy_rapier3d = { version = "0.26", features = [ "simd-stable", "debug-render-3d" ] }
serde_json = "1.0"
rapier3d = { version = "0.19", features = [ "simd-stable" ] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3